hw about Martin

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>About Martin</title>
 </head>
 <body>
-$END$
+<h1>Привет! Меня зовут Мартин!</h1>
+<div>Я чудесный пес породы золотистый лабрадор-ретривер.</div>
+<div>И сегодня я вам расскажу о себе подробнее.</div>
+<div id="toctitle">Содержание</div>
+<ul>
+    <li id="about">
+        <a href="#about_me">Обо мне</a>
+    </li>
+    <li id="what_i_like">
+        <a href="#what_like">Что я люблю</a>
+    </li>
+    <li id="my_family">
+        <a href="#family">Моя семья</a>
+    </li>
+</ul>
+<img src="20221105_121348.jpg" alt="pic" width="150" height="200"/>
+<h2 id="about_me">Обо мне</h2>
+<p>Мою хозяйку зовут Аня и наша история началачь с ней 11 лет назад...</p>
+<img src="9.jpg" width="185" height="185"/>
+<p>Я был маленьким и неуклюжим щенком, но таким обаятельным и умным! Я обожал портить вещи и писять в доме! Ежедневным
+    ритуалом для меня было сбегать к соседям, сожрать их помидоры и пометить красивые цветочки, которые тут же вяли на
+    глазах после моего поступка!
+    Но теперь я взрослый и серьезный пес, потому что в моей стае есть два малолетних тирана, за которыми нужен глаз да
+    глаз.</p>
+<img src="20211114_103541.jpg" width="200" height="200"/>
+<h2 id="what_like">Что я люблю</h2>
+<p>Я люблю запах утра и пробежки к озеру, люблю когда Аня дома, люблю когда выпадает снег и тает, потому что можно
+    валяться в грязи, люблю ездить на машине и капать слюной на коробку передач! Люблю когда меня чешут за ушком и могу
+    питаться только этим...ну и еще помидорами!<br>
+    Я люблю когда дети спят и я тоже могу спать. Люблю когда они играют со мной в доктора. Только не очень люблю когда
+    они запихивают мне в ноздри карандаши и говорят, что это сопли!<br>
+    Я люблю плавать в озере, а особенно люблю подплывать к незнакомым людям и класть лапы им на плечи!Вот только они
+    почему-то не любят, начинают орать и тонуть...
+    А вобще я люблю жизнь и свою семью!</p>
+<img src="c.jpg" width="200" height="190"/>
+<img src="8v.jpg" width="200" height="190"/>
+<h2 id="family">Моя семья</h2>
+<p>У меня очень большая семья, но самый главный в ней это я!</p>
 </body>
 </html>
