--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,26 @@
     <title>Table currency</title>
 </head>
 <body>
-<h2>Currency</h2>
+<h2>Валюта сегодня</h2>
 <ul>
     <li>$(USD) Доллар (США)</li>
     <li>€(EUR) Евро (Страны Еврозоны)</li>
     <li>₽(RUB) Рубль (Россия)</li>
 </ul>
+<h2>Курс на сегодня</h2>
+<table>
+    <tr>
+        <td>Валюта</td>
+        <td>Курс на сегодня</td>
+    </tr>
+    <tr>
+        <td>$(USD)/₽(RUB)</td>
+        <td>74.76 ₽</td>
+    </tr>
+    <tr>
+        <td>€(EUR)/₽(RUB)</td>
+        <td>79.98 ₽</td>
+    </tr>
+</table>
 </body>
 </html>
