--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,25 @@
     <li>₽(RUB) Рубль (Россия)</li>
 </ul>
 <h2>Курс на сегодня</h2>
-<table>
+<table border="1" style="border-color:red">
     <tr>
+        <td>Флаг</td>
         <td>Валюта</td>
         <td>Курс на сегодня</td>
     </tr>
     <tr>
+        <td>
+            <img src="united-states.png" width="90px">
+            <img src="russia.png" width="90px">
+        </td>
         <td>$(USD)/₽(RUB)</td>
         <td>74.76 ₽</td>
     </tr>
     <tr>
+        <td>
+            <img src="european-union.png" width="90px">
+            <img src="russia.png" width="90px">
+        </td>
         <td>€(EUR)/₽(RUB)</td>
         <td>79.98 ₽</td>
     </tr>
